# libyaml

./: CMakeLists.txt  INSTALL  README  yaml.pc.in
doc/: CMakeLists.txt  doxygen.cfg.in
src/: CMakeLists.txt
tests/: CMakeLists.txt
